# rationalis

./: .gitignore  LICENSE  Makefile  README.md  bankscraper.cabal  rationalis.cabal  stack.yaml
app/: Argparse.hs  Commands.hs  Main.hs  PBZ.hs
contrib/completion/bash/: rationalis
contrib/completion/zsh/: _rationalis
contrib/vim/ftdetect/: rationalis.vim
contrib/vim/syntax/: rationalis.vim
doc/examples/: rationalis.conf  rationalis.rules  transactions.json
doc/man/: rationalis.1  rationalis.5  rationalis.rules.5
man/: rationalis.1  rationalis.rules.5
src/: Argparse.hs  Commands.hs  Config.hs  Lib.hs  Main.hs  PBZ.hs  Rules.hs  Transaction.hs  Transformations.hs
test/: Spec.hs
