name:                bankscraper
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/poljar/bankscraper#readme
license:             BSD3
license-file:        LICENSE
author:              Damir Jelić
maintainer:          poljar@termina.org.uk
copyright:           Copyright: (c) 2017 Damir Jelić
category:            Tools
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , time
                     , text
                     , lens
                     , scientific
                     , bytestring
                     , lens-aeson
  default-language:    Haskell2010

executable bankscraper
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , text
                     , time
                     , optparse-applicative
                     , wreq
                     , bankscraper
  default-language:    Haskell2010

test-suite bankscraper-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bankscraper
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/poljar/bankscraper
