name:                rationalis
version:             0.1
-- synopsis:
-- description:
homepage:            https://github.com/poljar/rationalis#readme
license:             ISC
license-file:        LICENSE
author:              Damir Jelić
maintainer:          poljar@termina.org.uk
copyright:           Copyright (c) 2017 Damir Jelić
category:            Tools
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Rules, Config
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , time
                     , text
                     , lens
                     , aeson
                     , ansi-wl-pprint
                     , tagsoup
                     , bytestring
                     , megaparsec
                     , regex-pcre
                     , ConfigFile
  default-language:    Haskell2010

executable rationalis
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Argparse, Commands
  ghc-options:         -W -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , text
                     , time
                     , lens
                     , aeson
                     , filepath
                     , directory
                     , megaparsec
                     , ansi-wl-pprint
                     , ConfigFile
                     , typed-process
                     , optparse-applicative
                     , rationalis
  default-language:    Haskell2010

executable pbz-fetcher
  hs-source-dirs:      app
  main-is:             PBZ.hs
  ghc-options:         -W -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , text
                     , time
                     , lens
                     , wreq
                     , aeson
                     , tagsoup
                     , scientific
                     , lens-aeson
                     , http-client
                     , http-client-tls
                     , optparse-applicative
                     , rationalis
  default-language:    Haskell2010

test-suite rationalis-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, app
  other-modules:       Argparse
  main-is:             Spec.hs
  build-depends:       base
                     , tasty
                     , time
                     , tasty-hunit
                     , optparse-applicative
                     , rationalis
  ghc-options:         -W -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/poljar/rationalis
