name:                rationalis
version:             0.1
-- synopsis:
-- description:
homepage:            https://github.com/poljar/rationalis#readme
license:             ISC
license-file:        LICENSE
author:              Damir Jelić
maintainer:          poljar@termina.org.uk
copyright:           Copyright (c) 2017 Damir Jelić
category:            Tools
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable rationalis
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Argparse, Commands, Rules, Lib, Config, Transformations,
                       Transaction
  ghc-options:         -W -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , bytestring
                     , text
                     , time
                     , lens
                     , aeson
                     , filepath
                     , directory
                     , megaparsec
                     , ansi-wl-pprint
                     , regex-pcre
                     , ansi-terminal
                     , aeson-pretty
                     , ConfigFile
                     , typed-process
                     , optparse-applicative
  default-language:    Haskell2010

executable pbz-fetcher
  hs-source-dirs:      src
  main-is:             PBZ.hs
  other-modules:       Lib, Transaction
  ghc-options:         -W -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , text
                     , time
                     , lens
                     , wreq
                     , aeson
                     , tagsoup
                     , scientific
                     , lens-aeson
                     , ansi-terminal
                     , ansi-wl-pprint
                     , http-client
                     , http-client-tls
                     , optparse-applicative
  default-language:    Haskell2010

test-suite rationalis-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  other-modules:       Argparse, Lib, Rules
  main-is:             Spec.hs
  build-depends:       base
                     , tasty
                     , aeson
                     , time
                     , bytestring
                     , regex-pcre
                     , megaparsec
                     , tasty-hunit
                     , ansi-terminal
                     , ansi-wl-pprint
                     , optparse-applicative
  ghc-options:         -W -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/poljar/rationalis
