name:                rationalis
version:             0.1
-- synopsis:
-- description:
homepage:            https://github.com/poljar/rationalis#readme
license:             ISC
license-file:        LICENSE
author:              Damir Jelić
maintainer:          poljar@termina.org.uk
copyright:           Copyright (c) 2017 Damir Jelić
category:            Tools
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable rationalis
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Argparse, Commands, Rules, Lib, Config, Transformations,
                       Transaction
  ghc-options:         -W -threaded -rtsopts -with-rtsopts=-N

  if impl(ghc <= 8.0)
    ghc-options: -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances
    build-depends: semigroups == 0.18.*

  build-depends:       base
                     , ConfigFile
                     , aeson
                     , aeson-pretty
                     , ansi-terminal
                     , ansi-wl-pprint
                     , bytestring
                     , directory
                     , filepath
                     , lens
                     , megaparsec
                     , mtl
                     , optparse-applicative
                     , regex-pcre
                     , time
                     , typed-process
  default-language:    Haskell2010

executable pbz-fetcher
  hs-source-dirs:      src
  main-is:             PBZ.hs
  other-modules:       Lib, Transaction
  ghc-options:         -W -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , ansi-terminal
                     , ansi-wl-pprint
                     , bytestring
                     , http-client
                     , http-client-tls
                     , lens
                     , lens-aeson
                     , scientific
                     , tagsoup
                     , text
                     , time
                     , wreq
  default-language:    Haskell2010

test-suite rationalis-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  other-modules:       Argparse, Lib, Rules
  main-is:             Spec.hs
  build-depends:       base
                     , aeson
                     , ansi-terminal
                     , ansi-wl-pprint
                     , bytestring
                     , megaparsec
                     , optparse-applicative
                     , regex-pcre
                     , tasty
                     , tasty-hunit
                     , time
  ghc-options:         -W -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/poljar/rationalis
